Re-interpreted variable importance plot.

--- a/Website/index.Rmd
+++ b/Website/index.Rmd
@@ -480,7 +480,7 @@ rf_var_imp <- model_parts(rf_explain)
 plot(rf_var_imp, show_boxplots = TRUE)
 ```
 
-Each bar shows how much the RMSE would change if the corresponding variable was permuted. If permuting a certain variable significantly increases the RMSE relative to permuting other variables, then it would be important. Here, the RMSE increases the most when revenue from the Child Nutrition Act, spending on instructional staff, and total expenditure are permuted. The highest-ranking variables all came from the School Survey, and the top 3 most important demographic variables from the ACS are percent of the total population who are Black only, percent of households with internet subscription, and percent of households receiving SSI, public assistance, or food stamps (in each district). The variables at the bottom that showed no change in RMSE if permuted were excluded from the modeling at the start because they are ID or raw demographic variables (for these we transformed them into percentages).
+Each bar shows how much the RMSE would change if the corresponding variable was permuted. If permuting a certain variable significantly increases the RMSE relative to permuting other variables, then it would be important. Here, the RMSE increases the most when spending on instructional staff, spending on the school administration, and percent of the total population who are Black only are permuted. One thing to note is because the function we used to compute variable importance samples observations for permutation, we might not see the same order of importance every time we run but the results should be fairly consistent. What we noticed was that for the most part, the highest-ranking variables all came from the School Survey, and the most important demographic variables from the ACS were usually percent of the total population who are Black, percent of the total population who are white only, and percent of households with internet subscription (in each district). The variables at the bottom that showed no change in RMSE if permuted were excluded from the modeling at the start because they are ID or raw demographic variables (for these we transformed them into percentages).
 
 
 # Implications
